--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Frontend environment variables for SIRRED
 # Adjust the values as needed for your hosting environment
 VITE_APP_NAME=SIRRED
-VITE_API_BASE_URL=
+VITE_API_URL=https://api.sirred.clubatleticoimperial.com
 # Add any other variables required by the frontend
