--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "frontend",
   "version": "0.0.1",
-  "description": "A Quasar Project",
-  "productName": "Quasar App",
+  "description": "Sistema de Registro de Docentes - UNITEPC",
+  "productName": "SIRRED UNITEPC",
   "author": "juanjo2702 <juanjo270201@gmail.com>",
   "private": true,
   "scripts": {
@@ -15,8 +15,10 @@
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
+    "vue-chartjs": "^5.3.3",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
